# hunter-killer-drone

./: .gitignore  LICENSE  README.md
models/casual_female/: model.config
models/casual_female/meshes/: casual_female.dae
models/fixed_wing/: model.config  model.sdf
models/hatchback/: model.config
models/hatchback/meshes/: hatchback.mtl
models/hatchback_blue/: metadata.pbtxt  model.config
models/pickup/: metadata.pbtxt  model.config
models/pickup/meshes/: pickup.dae
models/sonoma_raceway/: model.config
models/sonoma_raceway/meshes/: Raceway.mtl
scripts/: build.sh  launch.sh  rebuild.sh  start.sh  ubuntuSetup.sh
workspace/src/hunter-killer-drone/: package.xml  setup.cfg  setup.py
workspace/src/hunter-killer-drone/hunter_killer_drone/: control.py  offboard_control.py  processes.py  vision.py  visualizer.py
workspace/src/hunter-killer-drone/launch/: launch.py
workspace/src/hunter-killer-drone/resource/: visualize.rviz
