<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunter_killer_drone</name>
  <version>0.0.0</version>
  <description>Firmware and simulation of a hunter killer drone</description>
  <maintainer email="televisionninja@gmail.com">TelevisionNinja</maintainer>
  <license>MIT</license>

  <depend>px4_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
